# ec-rust-ts

./: .gitignore  .nxignore  CLAUDE.md  README.md  delivery-domain-impl-steps.md  nx.json  package.json  pnpm-lock.yaml
.cursor/: mcp.json
app/backend/: Cargo.toml  README.md  REFACTORING.md  bacon.toml  project.json
app/backend/docs/: ARCHITECTURE.md  database-schema.md
app/backend/instructions/: clean-architecture.md  create-query-instructions.md
app/backend/src/: error.rs  lib.rs  main.rs
app/backend/src/application/: dispatcher.rs  error.rs  mod.rs
app/backend/src/application/commands/: mod.rs
app/backend/src/application/dto/: calculate_cart_result_dto.rs  category_list_dto.rs  color_list_dto.rs  create_order_result_dto.rs  mod.rs  payment_method_list_dto.rs  product_dto.rs  product_list_dto.rs  shipping_method_list_dto.rs  variant_dto.rs  variant_summary_dto.rs
app/backend/src/application/queries/: category_query.rs  get_product_detail_query.rs  get_product_query.rs  image_query.rs  mod.rs  price_query.rs  product_detail.rs  product_query.rs  product_summary.rs  status_query.rs  stock_query.rs  variant_query.rs
app/backend/src/application/repositories/: category_repository.rs  color_repository.rs  coupon_repository.rs  mod.rs  order_repository.rs  payment_method_repository.rs  product_repository.rs  shipping_method_repository.rs  variant_repository.rs
app/backend/src/domain/: error.rs  mod.rs
app/backend/src/frameworks_and_drivers/: mod.rs
app/backend/src/infrastructure/: mod.rs
app/backend/src/interface_adapters/: mod.rs
app/backend/src/presentation/: mod.rs  routes.rs
app/backend/tests/: integration_product_repository_test.rs  quick_dev.rs
(+515 files in other folders)
