[package]
name = "ec-rust-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ec-rust-backend"
path = "src/main.rs"

[lib]
name = "ec_rust_backend"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "macros", "tls-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
tower-http = { version = "0.6", features = ["cors"] }
# OpenAPI/Swagger support
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
httpc-test = "0.1.10"
